@@ -1,8 +1,8 @@
 {
   "timestamp" : "2022-05-31T08:14:21Z",
-  "count" : 1,
-  "count_minmax" : [ 1, 4 ],
-  "count_decinc" : [ -3, +4 ],
+  "count" : 2,
+  "count_minmax" : [ 2, 2 ],
+  "count_decinc" : [ -0, +2 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
