@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-05-31T00:39:31Z",
+  "timestamp" : "2022-05-31T08:14:21Z",
   "count_outdated" : 1534,
   "uniques_outdated" : 83,
-  "count" : 1605,
-  "uniques" : 92,
+  "count" : 1606,
+  "uniques" : 93,
   "views" : [
     {
       "timestamp": "2022-05-17T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 4 ],
+      "count": 1,
+      "count_minmax": [ 1, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
@@ -65,6 +65,13 @@
       "timestamp": "2022-05-30T00:00:00Z",
       "count": 15,
       "count_minmax": [ 4, 15 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-31T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
