@@ -1,10 +1,10 @@
 {
-  "count": 71,
+  "count": 72,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-05-17T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -45,6 +45,11 @@
     {
       "timestamp": "2022-05-30T00:00:00Z",
       "count": 15,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-31T00:00:00Z",
+      "count": 2,
       "uniques": 1
     }
   ]
